force-app/main/default/objects/SalesOrders__x/SalesOrders__x.object-meta.xml
<CustomObject>
    <description>SalesOrders</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SalesOrders</externalName>
    <label>Sales Order</label>
    <pluralLabel>Sales Orders</pluralLabel>
</CustomObject>