force-app/main/default/objects/SalesOrders__x/fields/Businesspartnerid__c.field-meta.xml
<CustomField>
    <fullName>Businesspartnerid__c</fullName>
    <description>Businesspartnerid</description>
    <externalDeveloperName>Businesspartnerid</externalDeveloperName>
    <label>Businesspartnerid</label>
    <length>128</length>
    <type>Text</type>
</CustomField>