force-app/main/default/objects/SalesOrders__x/fields/Companyname__c.field-meta.xml
<CustomField>
    <fullName>Companyname__c</fullName>
    <description>Companyname</description>
    <externalDeveloperName>Companyname</externalDeveloperName>
    <label>Companyname</label>
    <length>128</length>
    <type>Text</type>
</CustomField>