force-app/main/default/objects/SalesOrders__x/fields/Netsum__c.field-meta.xml
<CustomField>
    <fullName>Netsum__c</fullName>
    <description>Netsum</description>
    <externalDeveloperName>Netsum</externalDeveloperName>
    <label>Netsum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>