force-app/main/default/objects/SalesOrders__x/fields/Orderid__c.field-meta.xml
<CustomField>
    <fullName>Orderid__c</fullName>
    <description>Orderid</description>
    <externalDeveloperName>Orderid</externalDeveloperName>
    <label>Orderid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>