force-app/main/default/objects/SalesOrders__x/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Tax</description>
    <externalDeveloperName>Tax</externalDeveloperName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>