force-app/main/default/objects/SalesOrders__x/fields/Totalsum__c.field-meta.xml
<CustomField>
    <fullName>Totalsum__c</fullName>
    <description>Totalsum</description>
    <externalDeveloperName>Totalsum</externalDeveloperName>
    <label>Totalsum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>